css: Fix long name overflow in user profile modal.
Set width of the heading tag displaying user profile name heading, which
doesn't let the edit button get pushed off the user profile modal.

Ellipsis property is applied to user profile name on text overflow.

Fixes: #23781.

--- a/static/styles/modal.css
+++ b/static/styles/modal.css
@@ -50,10 +50,22 @@
     font-size: 1.375rem;
     font-weight: 600;
     line-height: 1.25;
+    display: flex;
 
     /* help_link_widget margin for the fa-circle-o. */
     .help_link_widget {
         margin-left: 5px;
+    }
+}
+
+.user_profile_name_heading {
+    padding-right: 1rem;
+    max-width: 80%;
+
+    .user_profile_name {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
 
